# pulumi-wasm-deploy-testing

./: .gitignore  .gitmodules  .mergify.yml  Cargo.toml  README.md  build.bat  build.sh  config.yaml  config.yml  entrypoint.bat  entrypoint.sh  justfile  logdy.txt  mkdocs.yml  renovate.json  run.bat  run.sh  rust-toolchain.toml  rustfmt.toml
cargo-pulumi/: Cargo.toml
cargo-pulumi/src/: graph.rs  main.rs  metadata.rs
cargo-pulumi/tests/: test.rs
cargo-pulumi/tests/fixtures/example/: .gitignore  Cargo.toml  config.yml  service.wit
cargo-pulumi/tests/fixtures/example/common/: Cargo.toml
cargo-pulumi/tests/fixtures/example/common/src/: bindings.rs  lib.rs
cargo-pulumi/tests/fixtures/example/common_lib/: Cargo.toml
cargo-pulumi/tests/fixtures/example/common_lib/src/: lib.rs
cargo-pulumi/tests/fixtures/example/main/: Cargo.toml
cargo-pulumi/tests/fixtures/example/main/src/: bindings.rs  lib.rs
cargo-pulumi/tests/fixtures/example/provider_a/: Cargo.toml
cargo-pulumi/tests/fixtures/example/provider_a/src/: bindings.rs  lib.rs
cargo-pulumi/tests/fixtures/example/provider_a_lib/: Cargo.toml
cargo-pulumi/tests/fixtures/example/provider_a_lib/src/: lib.rs
docs/: crates.md  (+2 more)
examples/docker/: Cargo.toml  Pulumi.yaml  justfile
examples/docker/docker/: Dockerfile
examples/docker/src/: lib.rs
examples/docker/tests/: test.rs
examples/simple/: Cargo.toml  Pulumi.test.yaml  Pulumi.yaml  entrypoint.ps1  entrypoint.sh  justfile
examples/simple/src/: bindings.rs  lib.rs
examples/simple/tests/: test.rs
msgpack_protobuf_converter/: Cargo.toml
msgpack_protobuf_converter/src/: lib.rs
providers/pulumi_wasm_provider_docker/: Cargo.toml
providers/pulumi_wasm_provider_docker/src/: bindings.rs  lib.rs
providers/pulumi_wasm_provider_docker/wit/: world.wit
providers/pulumi_wasm_provider_random_rust/: Cargo.toml
providers/pulumi_wasm_provider_random_rust/src/: lib.rs  random.rs  resource.rs  source.rs
providers/pulumi_wasm_provider_random_rust/wit/: world.wit
pulumi_rust/: Cargo.toml
pulumi_rust/proto/pulumi/: engine.proto
pulumi_rust/src/: grpc.rs  lib.rs  pulumi.rs  pulumi_logger.rs
pulumi_rust_wasm/: Cargo.toml
pulumi_rust_wasm/src/: bindings.rs  lib.rs  output.rs
pulumi_rust_wasm/tests/: integration_test.rs
pulumi_wasm/: Cargo.toml  build.rs
pulumi_wasm/src/: bindings.rs  finalizer.rs  globals.rs  grpc.rs  lib.rs  output.rs  pulumi_connector_impl.rs
pulumi_wasm/tests/: test.rs  test.rs.backup
pulumi_wasm_common/: Cargo.toml
pulumi_wasm_common/src/: lib.rs  logger.rs
pulumi_wasm_core/: Cargo.toml  build.rs
pulumi_wasm_core/src/: engine.rs  lib.rs  model.rs  nodes.rs
pulumi_wasm_core/src/pulumi/: connector.rs  mod.rs  service.rs  service_impl.rs
pulumi_wasm_generator/tests/output/command_provider/provider/: Cargo.toml
pulumi_wasm_generator/tests/output/command_provider/provider/src/: bindings.rs  lib.rs
pulumi_wasm_generator_lib/: Cargo.toml
pulumi_wasm_generator_lib/src/: lib.rs  model.rs  schema.rs
pulumi_wasm_generator_lib/src/output/: mod.rs
pulumi_wasm_generator_lib/src/output/provider/: Cargo.toml.handlebars  cargo.rs  lib.rs.handlebars  source_code.rs
pulumi_wasm_generator_lib/src/output/rust/: Cargo.toml.handlebars  lib.rs.handlebars  resource.rs.handlebars  source_code_librs.rs  source_code_types.rs  types.rs.handlebars
pulumi_wasm_generator_lib/src/output/wit/: dependencies.handlebars  mod.rs  wit.handlebars
pulumi_wasm_generator_lib/tests/: test.rs
pulumi_wasm_generator_lib/tests/output/: .gitignore
pulumi_wasm_generator_lib/tests/output/command_provider/lib/src/: lib.rs
pulumi_wasm_generator_lib/tests/output/command_provider/lib/wit/: world.wit
pulumi_wasm_generator_lib/tests/output/command_provider/provider/src/: bindings.rs  lib.rs
pulumi_wasm_generator_lib/tests/output/docker_provider/lib/src/: lib.rs  resource.rs  types.rs
pulumi_wasm_generator_lib/tests/output/docker_provider/provider/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/docker_provider/provider/src/: bindings.rs  lib.rs
pulumi_wasm_generator_lib/tests/output/pulumi_cyclic-types/: rust-toolchain.toml
pulumi_wasm_generator_lib/tests/output/pulumi_cyclic-types/lib/src/: types.rs
pulumi_wasm_generator_lib/tests/output/pulumi_cyclic-types/provider/wit/: world.wit
pulumi_wasm_generator_lib/tests/output/pulumi_mini-awsnative/lib/src/: types.rs
pulumi_wasm_generator_lib/tests/output/pulumi_mini-awsnative/provider/src/: lib.rs
pulumi_wasm_generator_lib/tests/output/pulumi_providers/command/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_providers/command/lib/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_providers/command/provider/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_providers/docker/lib/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_providers/docker/provider/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_providers/random/lib/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_providers/random/provider/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_tests/cyclic-types/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/pulumi_tests/cyclic-types/lib/: Cargo.toml
pulumi_wasm_generator_lib/tests/output/random_provider/: Cargo.toml
pulumi_wasm_main/: Cargo.toml
pulumi_wasm_main/src/: bindings.rs  lib.rs  random.rs
pulumi_wasm_proto/: Cargo.toml  build.rs
pulumi_wasm_proto/proto/pulumi/: resource.proto
pulumi_wasm_proto/src/: lib.rs
pulumi_wasm_random/: Cargo.toml
pulumi_wasm_random/src/: bindings.rs  lib.rs
pulumi_wasm_runner/: Cargo.toml  build.rs
pulumi_wasm_runner/src/: create_final_component.rs  main.rs  model.rs  pulumi.rs  pulumi_state.rs
pulumi_wasm_rust/: Cargo.toml  build.rs
pulumi_wasm_rust/src/: bindings.rs  lib.rs  output.rs  runner.rs
pulumi_wasm_rust_macro/: Cargo.toml
pulumi_wasm_rust_macro/src/: lib.rs
pulumi_wasm_wit/: Cargo.toml
pulumi_wasm_wit/src/: lib.rs
pulumi_wasm_wit/wit/: world.wit
wasm_common/: Cargo.toml
wasm_common/src/: bindings.rs  lib.rs  logger.rs
(+120 files in other folders)
