[package]
name = "pulumi-wasm-parent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "pulumi_wasm_runner",
    "pulumi_wasm",
    "providers/pulumi_wasm_provider_random",
    "pulumi_wasm_rust",
    "wasm_common",
    "examples/simple"
]

[workspace.dependencies]
anyhow = "1.0.80"
prost = "0.12.3"
prost-types = "0.12.3"
uuid = { version = "1.7.0", features = ["v4", "v7"] }
futures = "0.3.30"
lazy_static = "1.4.0"
once_cell = "1.19.0"
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"
rmp = "0.8.12"
rmp-serde = "1.1.2"
rmpv = "1.0.1"
serde = "1.0.197"
tonic = { version = "0.11.0", default-features = false }
serde_json = "1.0.114"
wasmtime = "18.0.2"
wasmtime-wasi = "18.0.2"
tonic-build = "0.11.0"
async-trait = "0.1.77"
tonic-web = "0.11.0"
log = { version = "0.4.21", features = ["kv"] }
tracing-subscriber = "0.3.18"
log4rs = "1.3.0"
tokio = { version = "1.36.0", features = ["sync", "macros", "io-util", "rt", "time"] }
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
