[package]
name = "cargo-pulumi"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
normpath.workspace = true
log.workspace = true
simple_logger.workspace = true
petgraph.workspace = true
cargo_metadata.workspace = true
itertools.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
testdir.workspace = true
fs_extra.workspace = true