[package]
name = "msgpack_protobuf_converter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmpv.workspace = true
prost.workspace = true
prost-types.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
