[package]
name = "pulumi_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-web = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
tonic = { version = "0.11.0", features = ["channel"] }
#tokio = { version = "1.35.1", features = ["full"] }
async-std = "1.12.0"
#pulumi_wasm = { path = "../pulumi_wasm" }
log = { version = "0.4.20", features = [] }
#extism = "1.0.3"
uuid = { version = "1.7.0", features = ["v4", "v7"] }
tracing-subscriber = "0.3.18"
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }
wasmtime = "17.0.1"
wasmtime-wasi = "17.0.1"
anyhow = "1.0.79"
serde = "1.0.196"
rmp-serde = "1.1.2"
serde_json = "1.0.113"
futures = "0.3.30"
async-trait = "0.1.77"

[build-dependencies]
tonic-build = "0.11.0"
serial_test = "3.0.0"

#
#[package.metadata.component]
#package = "component:pulumi-wasm"
#
#[package.metadata.component.target]
#path = "../wits/world.wit"
#world = "pulumi-wasm"