[package]
name = "pulumi_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-web.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
log.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
wit-bindgen.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
serde.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true

[build-dependencies]
tonic-build.workspace = true

#
#[package.metadata.component]
#package = "component:pulumi-wasm"
#
#[package.metadata.component.target]
#path = "../wits/world.wit"
#world = "pulumi-wasm"