[package]
name = "pulumi_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
futures.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
wit-bindgen.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde.workspace = true
tonic.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true

[package.metadata.component]
package = "component:pulumi-wasm"

[package.metadata.component.target]
path = "../wits/world.wit"
world = "pulumi-wasm"
