[package]
name = "pulumi_wasm"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
uuid.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
bitflags.workspace = true
wit-bindgen-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
pulumi_wasm_common.workspace = true
log.workspace = true
pulumi_wasm_core.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true

[package.metadata.component]
package = "component:pulumi-wasm"

[package.metadata.component.target]
path = "../pulumi_wasm_wit/wit/world.wit"
world = "pulumi-wasm"
