[package]
name = "pulumi_wasm_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
futures.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
bitflags.workspace = true
wit-bindgen-rt.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde.workspace = true
tonic.workspace = true
serde_json.workspace = true
pulumi_rust_wasm = { path = "../pulumi_rust_wasm" }
log.workspace = true
wasm_common = { path = "../wasm_common" }

[dev-dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[package.metadata.component]
package = "component:pulumi-wasm-main"

[package.metadata.component.target]
path = "../wits/world.wit"
world = "new-main"
