[package]
name = "pulumi_wasm_random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
#tonic-web = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
#tonic = { version = "0.10.2", features = ["channel"] }
#tokio = { version = "1.35.1", features = ["full"] }
#log = { version = "0.4.20", features = ["std"] }
uuid = { version = "1.7.0", features = ["v4", "v7"] }
futures = "0.3.30"
#[cfg(target_os = "wasi")]
#extism-pdk = "1.0.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }
rmp = "0.8.12"
rmp-serde = "1.1.2"
rmpv = "1.0.1"
serde = "1.0.196"
tonic = { version = "0.11.0", default-features = false }
serde_json = "1.0.113"

[dev-dependencies]
wasmtime = "17.0.1"
wasmtime-wasi = "17.0.1"
anyhow = "1.0.79"

[package.metadata.component]
package = "component:pulumi-provider-random"

[package.metadata.component.target]
path = "../wits/world.wit"
world = "pulumi-provider-random"
