[package]
name = "pulumi_wasm_runner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-web.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic = { workspace = true, default-features = true }
log.workspace = true
uuid.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
regex.workspace = true
tokio.workspace = true
log4rs.workspace = true
clap.workspace = true
wac-graph.workspace = true

[build-dependencies]
tonic-build.workspace = true
