[package]
name = "pulumi_wasm_rust"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid.workspace = true
bitflags.workspace = true
anyhow.workspace = true
serde.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
wit-bindgen.workspace = true
pulumi_wasm_rust_macro.workspace = true
wasm_common.workspace = true
rmpv.workspace = true