[package]
name = "pulumi_wasm_wit"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pulumi-wasm-rust = []
logger = []
server = ["dep:wasmtime"]

[dependencies]
wit-bindgen.workspace = true
wasmtime = { workspace = true, optional = true }