[package]
name = "pulumi_wasm_example_simple"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
futures.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
bitflags.workspace = true
wit-bindgen-rt.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde.workspace = true
tonic.workspace = true
serde_json.workspace = true
pulumi_wasm_rust.workspace = true
log.workspace = true
wasm_common.workspace = true
pulumi_wasm_random.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
