[package]
name = "pulumi_wasm_docker_provider"
version = "4.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true
wasm_common.workspace = true

[package.metadata.component]
package = "pulumi:docker"

[package.metadata.component.target]
path = "wit"
world = "main-world"

[package.metadata.component.target.dependencies]
"component:pulumi-wasm" = { path = "wit/deps/pulumi-wasm.wit" }
