[package]
name = "pulumi_wasm_provider_random_rust"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
wit-bindgen.workspace = true
serde.workspace = true
pulumi_wasm_rust.workspace = true
log.workspace = true
wasm_common.workspace = true
