[package]
name = "provider_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.24.0"
common_lib = { path = "../common_lib" }

[package.metadata.component]
target = { path = "../service.wit",  world = "provider-a" }
