[package]
name = "pulumi_wasm_random_provider"
version = "4.15.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true
pulumi_wasm_common.workspace = true

[package.metadata.component]
package = "pulumi:random"

[package.metadata.component.target]
path = "wit"
world = "random-pulumi"

[package.metadata.component.target.dependencies]
"component:pulumi-wasm" = { path = "wit/deps/pulumi-wasm.wit" }
