[package]
name = "pulumi_wasm_example_provider"
version = "0.0.1-0.0.0-DEV"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true
pulumi_wasm_common.workspace = true

[package.metadata.component]
package = "pulumi:example"

[package.metadata.component.target]
path = "wit"
world = "example-pulumi"

[package.metadata.component.target.dependencies]
"component:pulumi-wasm" = { path = "wit/deps/pulumi-wasm.wit" }
