[package]
name = "pulumi_wasm_aws-native"
version = "0.0.1-0.0.0-NIGHTLY-c0a15c8"
edition = "2021"

[dependencies]
wit-bindgen.workspace = true
pulumi_wasm_rust.workspace = true
serde.workspace = true
automod.workspace = true

[package.metadata.pulumi]
related_crate = "pulumi_wasm_aws-native_provider"
