[package]
name = "pulumi_wasm_aws-native_provider"
version = "0.0.1-0.0.0-NIGHTLY-c0a15c8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true
pulumi_wasm_common.workspace = true

[package.metadata.component]
package = "pulumi:aws-native"

[package.metadata.component.target]
path = "wit"
world = "aws-native-pulumi"

[package.metadata.component.target.dependencies]
"component:pulumi-wasm" = { path = "wit/deps/pulumi-wasm.wit" }
